fix: Adjusted index heading z-index

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -91,6 +91,7 @@ a {
     right: 0;
     text-align: center;
     font-size: 500%;
+    z-index: -100;
 }
 
 .index-title-wrapper {
